# MiniVM

./: .gitignore  CMakeLists.txt  README.md  test.sh
include/: bytecode.h  parser.h  runtime.h  scanner.h  semantics.h  tokens.h
src/: CMakeLists.txt  bc_compiler.cpp  gc.cpp  interpreter.cpp  parser.cpp  scanner.cpp  scanner.l  semantics.cpp
test/: big_tree.java  big_tree.out  binary_search.java  binary_tree.java  bubble_sort.java  factorial.java  linear_search.java  linked_list.java  quick_sort.java  tree_visitor.java
