execute_process(COMMAND flex -o ${CMAKE_CURRENT_SOURCE_DIR}/lex.yy.c ${CMAKE_CURRENT_SOURCE_DIR}/scanner.l)
add_library(lexyy lex.yy.c)
add_library(scanner scanner.cpp)
add_library(parser parser.cpp)
add_library(semantics semantics.cpp)
add_library(bc_compiler bc_compiler.cpp)
add_library(gc gc.cpp)
add_executable(interpreter interpreter.cpp)
target_link_libraries(interpreter gc bc_compiler lexyy scanner parser semantics)